# goit-pythonweb-hw-12

./: .dockerignore  .env.example  DEPLOY.md  Dockerfile  Dockerfile.prod  LICENSE  README.md  README_FINAL.md  REFRESH_TOKENS.md  build-and-push.bat  build-and-push.sh  build.sh  docker-compose.dev.yml  docker-compose.yml  main.py  postman-guide.md  pyproject.toml  pytest.ini  render.yaml  test_health.py
docs/: Makefile  conf.py  index.rst  modules.rst
src/: config.py  exceptions.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py
src/schemas/: contacts.py  users.py
tests/: README.md  __init__.py  simple_test.py  test_api.py  test_api_complete.py  test_auth_advanced.py  test_auth_functions.py  test_auth_functions_extended.py  test_auth_routes_comprehensive.py  test_auth_routes_integration.py  test_auth_simple.py  test_avatar_upload.py  test_basic.py  test_cloudinary_logic.py  test_config.py  test_contacts_functions.py  test_contacts_routes.py  test_contacts_routes_integration.py  test_contacts_routes_simple.py  test_coverage_boost.py  test_email_simple.py  test_error_handling.py  test_exceptions_comprehensive.py  test_fastapi_mail.py  test_filename_processing.py  test_full_api.py  test_full_registration.py  test_no_db.py  test_rate_limit_simple.py  test_rate_limiting.py  test_redis_service_simple.py  test_refresh_endpoint.py  test_refresh_tokens.py  test_registration.py  test_repository_contacts.py  test_repository_users.py  test_robust_email.py  test_routes.py  test_routes_auth.py  test_routes_basic.py  (+8 more)
(+5 files in other folders)
